--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "react-ts-basic-ui",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
+  "author": "Joao Gabriel Santos",
+  "main": "dist/index.ts",
+  "module": "dist/index.ts",
+  "files": [ "dist", "README.md" ],
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.16.5",
